squash that bug

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,4 @@
+
 // $main-color: blue;
 $shadow: 2px 2px 10px #888888;
 $offWhite: #F8F8F8;
@@ -645,7 +646,7 @@ header {
     .parallax {
         text-align: center;
         padding: 30px;
-        background-image: url('https://files.slack.com/files-tmb/T0KH5PHEJ-F7PQGEYL8-8866f4b98a/food2_1024.jpg');
+        background-image: url('restaurant-background.jpg');
         background-attachment: fixed;
     }
 
